--- a/views/admin.pug
+++ b/views/admin.pug
@@ -4,10 +4,9 @@
     
     <body>
     div(class="color")
-        -var html_names=['Society Name','Event Name','About','Rule 1','Rule 2','Rule 3','Rule 4','Co-ordinator 1','Co-ordinator 2','Venue','Event Fee','Prize Money','Maximum Participants','Poster Name','Date','Time'];
-        -var types=['text','text','textarea','text','text','text','text','text','text','text','radio','text','number','text','date','time'];
-        -var names=['society','event','about','r1','r2','r3','r4','c1','c2','venue','fee','prize','max_mem','poster','date','time'];
-        -var payment= ['100','200','300','500'];
+        -var html_names=['Event Name','About','Rule 1','Rule 2','Rule 3','Rule 4','Co-ordinator 1','Co-ordinator 2','Venue','Prize','Maximum Participants','Poster Name','Date','Time'];
+        -var types=['text','textarea','text','text','text','text','text','text','text','text','number','text','date','time'];
+        -var names=['event','about','r1','r2','r3','r4','c1','c2','venue','prize','max_mem','poster','date','time'];
         -var i=0;
   
         <div class="container">
@@ -20,12 +19,6 @@
                     br
                     -if(types[i]=='textarea')
                         textarea(type=types[i-1] placeholder="Write about event" id="data"+(i+1) name=names[i++])
-                    -else if(types[i]=='radio')
-                        each r in payment
-                            label= "₹"+r
-                            input( type=types[i]  id="data"+(i+1) name=names[i] value=r)
-                        -i++;
-                        br
                     -else if(types[i]=='number')
                         select(id="data"+((i++)+1) style="width:100px")
                             -for(var j=1;j<=20;j++)
