--- a/views/admin.pug
+++ b/views/admin.pug
@@ -11,7 +11,7 @@
   
         <div class="container">
         div(class="pad")
-            h3(class="text-center content1")= "Vikiran Society Registration"
+            h3(class="text-center content1")= "Adding Events"
             br
             <form class="contact-form" id="form_admin">
                 for r in html_names
