--- a/views/admin.pug
+++ b/views/admin.pug
@@ -11,12 +11,10 @@
         -if(event)
             -value=[event.Event_Name, event.About, event.Rules['1'], event.Rules['2'],event.Rules['3'],event.Rules['4'],event.Co_ordinator1,event.Co_ordinator2,event.Venue,event.Prize_Money,event.Maximum_Members,event.Poster_Url,event.Event_Date,event.Event_Time]
         -var i=0;
-
-        -console.log(value);
   
         <div class="container">
         div(class="pad")
-            h3(class="text-center content1")= "Adding Events"
+            h3(class="text-center content1")= `${TYPE} an Event`
             br
             form(class="contact-form" id=`${unique}`)
                 for r in html_names
