--- a/views/event.pug
+++ b/views/event.pug
@@ -46,7 +46,7 @@
                                     -if(i!=1)
                                         -if(i==4)
                                             <td>
-                                                a(href="https://www.washingtonpost.com/graphics/2019/entertainment/oscar-nominees-movie-poster-design/img/vice-web.jpg" style="text-decoration:none;color:white")= value[i]+".jpg"
+                                                a(href="/posters/quiz.jpg" style="text-decoration:none;color:white")= value[i]+".jpg"
                                             </td>
                                         -else
                                             td= value[i]
