--- a/views/competition.pug
+++ b/views/competition.pug
@@ -12,9 +12,10 @@
     <body>
 
         -function Competition(events)
+            div(class="pad")
+                h2(class="text-center content1") TechoNetes <br/> Powerered By <a href="https://codingblocks.com/" style="color:white;text-decoration:none">Coding Blocks</a>
             div(class="container")
                 div(class="pad text-center")
-                    h3(class="content1")= "Events"
                     div(class="row text-center")
                         each r in events                           
                                 br
