--- a/views/details.pug
+++ b/views/details.pug
@@ -5,6 +5,8 @@
     <body>
     
         div(class="color text-center")
+            div(class="pad")
+                h2(class="text-center content1") TechoNetes <br/> Powerered By <a href="https://codingblocks.com/" style="color:white;text-decoration:none">Coding Blocks</a>
             div(class="container text-center")
                 div(class="pad text-center")
                     h3(class="content1")= "Details"
