--- a/views/event.pug
+++ b/views/event.pug
@@ -9,9 +9,11 @@
     
         div(class="back")
             div(class="color")
+                div(class="pad")
+                    h2(class="text-center content1") TechoNetes <br/> Powerered By <a href="https://codingblocks.com/" style="color:white;text-decoration:none">Coding Blocks</a>
                 div(class="container")
                     div(class="pad")
-                        h2(class="text-center content1")= event.Event_Name
+                        h3(class="text-center content1")= event.Event_Name
                     <br>
                   
                     <table class="text-center table table-dark table-striped table-bordered">
