--- a/views/admin.pug
+++ b/views/admin.pug
@@ -12,6 +12,8 @@
             -value=[event.Event_Name, event.About, event.Rules['1'], event.Rules['2'],event.Rules['3'],event.Rules['4'],event.Co_ordinator1,event.Co_ordinator2,event.Venue,event.Prize_Money,event.Maximum_Members,event.Poster_Url,event.Event_Date,event.Event_Time]
         -var i=0;
   
+        div(class="pad")
+            h2(class="text-center content1") TechoNetes <br/> Powerered By <a href="https://codingblocks.com/" style="color:white;text-decoration:none">Coding Blocks</a>
         <div class="container">
         div(class="pad")
             h3(class="text-center content1")= `${TYPE} an Event`
