--- a/views/event.pug
+++ b/views/event.pug
@@ -48,7 +48,7 @@
                                     -if(i!=1)
                                         -if(i==4)
                                             <td>
-                                                a(href="/posters/quiz.jpg" style="text-decoration:none;color:white")= value[i]+".jpg"
+                                                a(href=`/posters/${value[i]}.jpg` style="text-decoration:none;color:white")= value[i]+".jpg"
                                             </td>
                                         -else
                                             td= value[i]
