Adding codeTest posters

--- a/views/event.pug
+++ b/views/event.pug
@@ -8,7 +8,7 @@
         -var value=[event.Event_Name, [event.Co_ordinator1,event.Co_ordinator2],event.Venue,event.Maximum_Members,event.Poster_Url,event.Prize_Money,event.Event_Date,event.Event_Time]
     
         div(class="back")
-            div(class="color")
+            div(class="color"  style="height:170vh")
                 div(class="pad")
                     h2(class="text-center content1") TechoNetes <br/> Powerered By <a href="https://codingblocks.com/" style="color:white;text-decoration:none">Coding Blocks</a>
                 div(class="container")
@@ -69,6 +69,10 @@
                         </ul>   
                     </div> 
                     br
+
+                div(class="text-center")  
+                    a(href="https://docs.google.com/forms/d/e/1FAIpQLSdiloqHCx0H-lqPRH9tiVwlKFCKb3nZnAn4liV493heVZHFYQ/viewform" target="_blank")  
+                        button(type="button" class="btn btn-danger" style="width:150px!important")= "Register Now"
 
 
         <script src="../vikiran.js"></script></body>
