--- a/views/admin.pug
+++ b/views/admin.pug
@@ -3,7 +3,7 @@
     include header.pug
     
     <body>
-    div(class="color")
+    div(class="color" style="height: 240vh")
         -var html_names=['Event Name','About','Rule 1','Rule 2','Rule 3','Rule 4','Co-ordinator 1','Co-ordinator 2','Venue','Prize','Maximum Participants','Poster Name','Date','Time'];
         -var types=['text','textarea','text','text','text','text','text','text','text','text','number','text','date','time'];
         -var names=['event','about','r1','r2','r3','r4','c1','c2','venue','prize','max_mem','poster','date','time'];
