--- a/views/admin.pug
+++ b/views/admin.pug
@@ -13,7 +13,7 @@
         -var i=0;
   
         div(class="pad")
-            h2(class="text-center content1") TechoNetes <br/> Powerered By <a href="https://codingblocks.com/" style="color:white;text-decoration:none">Coding Blocks</a>
+            h2(class="text-center content1") TechoNetes <br/> Powerered By <a href="https://codingblocks.com/" target="_blank" style="color:white;text-decoration:none">Coding Blocks</a>
         <div class="container">
         div(class="pad")
             h3(class="text-center content1")= `${TYPE} an Event`
