--- a/views/event.pug
+++ b/views/event.pug
@@ -64,7 +64,7 @@
                         <ul>
                             -console.log(event.Rules)
                             -for(var i=0;i<4;i++)
-                                -if(event.Rules[`${i+1}`]!=' ')    
+                                -if(event.Rules[`${i+1}`]!=' ' && event.Rules[`${i+1}`]!='')    
                                     li= event.Rules[`${i+1}`]
                         </ul>   
                     </div> 
