--- a/views/event.pug
+++ b/views/event.pug
@@ -24,9 +24,9 @@
                             th= "About"
                         </tr>
                     </thead>
-                    <tbody class="eventable">
-                        <tr>
-                            th <pre style="color:white;font-size:17px">#{event.About}</pre>
+                    <tbody>
+                        <tr class="eventable">
+                            th #{event.About}
                         </tr>
                     </tbody>
                     <br><br>
