--- a/views/header.pug
+++ b/views/header.pug
@@ -1,5 +1,5 @@
 head
-    title Techoetes 2021
+    title TechoNetes'21
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 
