Adding razorpay integration

--- a/views/event.pug
+++ b/views/event.pug
@@ -92,7 +92,7 @@
 
                 div(class="text-center") 
                     -//form(action="/payment/orders" method="post" enctype="x-www-form-urlencoded")
-                    a(href=`/register/${value[0]}`)
+                    a(href=`/register/${event.Event_Name}`)
                         button(type="submit" class="btn btn-danger")= "Register" 
 
 
