--- a/views/register.pug
+++ b/views/register.pug
@@ -27,7 +27,7 @@
 
                         <br>
                 
-                        <button class="btn" id="sub" style="background-color:red;margin-bottom:1vh" type="submit">Submit</button>
+                        <button class="btn" id="sub" style="background-color:red;width:100px;margin-bottom:1vh" type="submit">Checkout</button>
 
 
         script.
