Change in Title

--- a/views/competition.pug
+++ b/views/competition.pug
@@ -13,7 +13,7 @@
 
         -function Competition(events)
             div(class="pad")
-                h2(class="text-center content1") TechoNetes <br/> Powerered By <a href="https://codingblocks.com/" target="_blank" style="color:white;text-decoration:none">Coding Blocks</a>
+                h2(class="text-center content1") CESTA
             div(class="container")
                 div(class="pad text-center")
                     div(class="row text-center")
