--- a/views/event.pug
+++ b/views/event.pug
@@ -10,7 +10,7 @@
         div(class="back")
             div(class="color"  style="height:170vh")
                 div(class="pad")
-                    h2(class="text-center content1") TechoNetes <br/> Powerered By <a href="https://codingblocks.com/" target="_blank" style="color:white;text-decoration:none">Coding Blocks</a>
+                    h2(class="text-center content1") CESTA
                 div(class="container")
                     div(class="pad")
                         h3(class="text-center content1")= event.Event_Name
