--- a/views/payment.pug
+++ b/views/payment.pug
@@ -6,7 +6,7 @@
         
         div(class="color text-center")
             div(class="pad")
-                h2(class="text-center content1") TechoNetes <br/> Powerered By <a href="https://codingblocks.com/" target="_blank" style="color:white;text-decoration:none">Coding Blocks</a>
+                h2(class="text-center content1") CESTA
             
             <img style="margin-top:2vh;width:60vw;height:30vh" src="https://i0.wp.com/www.ecommerce-nation.com/wp-content/uploads/2019/02/Razorpay-the-new-epayment-that-will-break-everything-in-2019.png?fit=1000%2C600&ssl=1" />
             br
