--- a/views/register.pug
+++ b/views/register.pug
@@ -9,6 +9,8 @@
         -var types= ['text','text','number','text','email','number'];
 
         div(class="color")
+            div(class="pad")
+                h2(class="text-center content1") CESTA
             div(class="container")  
                 div(class="pad")
                     h3(class="text-center top content1")= "Registration"
