Change in Transaction Page

--- a/views/payment.pug
+++ b/views/payment.pug
@@ -20,7 +20,7 @@
             var options = {
                 "key": paymentID, // Enter the Key ID generated from the Dashboard
                 "name": "Cesta Society",
-                "description": "Transction for Volerant Event",
+                "description": "Transaction for Valorant Event",
                 "image": "https://delhitechnicalcampus.ac.in/wp-content/uploads/2021/02/CESTA-logo-300x75.jpg",
                 "order_id": order, //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
                 "handler": function (response){
