Change in register.pug

--- a/views/register.pug
+++ b/views/register.pug
@@ -4,7 +4,7 @@
     
     <body>
 
-        -var html_names=['Team Name','Player 1','Player 2','Player 3','Player 4','Player 5','College Name','E-Mail','Contact No.'];
+        -var html_names=['Team Name','Player 1 with Game ID','Player 2 with Game ID','Player 3 with Game ID','Player 4 with Game ID','Player 5 with Game ID','College Name','E-Mail','Contact No.'];
         -var names= ['team_name','p1','p2','p3','p4','p5','college_name','email','contact'];
         -var types= ['text','text','text','text','text','text','text','email','number'];
 
